readme file changes

--- a/src/envus/pendulum/pendulum_dae_builder.ipynb
+++ b/src/envus/pendulum/pendulum_dae_builder.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "18f8515e-6f28-4a71-9785-1178a3c1b658",
    "metadata": {},
    "outputs": [
@@ -28,18 +28,18 @@
     }
    ],
    "source": [
-    "theta,omega,u = sym.symbols('theta,omega,u', real=True)\n",
+    "theta,omega,tau = sym.symbols('theta,omega,tau', real=True)\n",
     "G,M,L = sym.symbols('G,M,L', real=True)\n",
     "\n",
     "dtheta = omega\n",
-    "domega = (3 * G / (2 * L) * sym.sin(theta) + 3.0 / (M * L**2) * u) \n",
+    "domega = (3 * G / (2 * L) * sym.sin(theta) + 3.0 / (M * L**2) * tau) \n",
     "\n",
     "x_list = [ theta, omega]\n",
     "f_list = [dtheta,domega]\n",
     "\n",
     "params_dict = {'G':9.8,'M':1,'L':1}\n",
-    "u_dict = {'u':0.0}\n",
-    "h_dict = {'x_pos':sym.cos(theta),'y_pos':sym.sin(theta)}\n",
+    "u_dict = {'tau':0.0}\n",
+    "h_dict = {'x_pos':sym.cos(theta),'y_pos':sym.sin(theta),'tau':tau}\n",
     "\n",
     "#    | Num | Observation      | Min  | Max |\n",
     "#    |-----|------------------|------|-----|\n",
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
