smib model updated

--- a/examples/pendulum/pendulum_td4.ipynb
+++ b/examples/pendulum/pendulum_td4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "63efa065",
+   "id": "a15e2af3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d2cee0e7",
+   "id": "28bc9582",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "11fd85c5",
+   "id": "d7c2f6c4",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f8cf1156",
+   "id": "a2aade8f",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ca9b573c",
+   "id": "d32c3a28",
    "metadata": {
     "scrolled": false
    },
@@ -259,8 +259,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "b1cb9f38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def angle_normalize(x):\n",
+    "    return ((x + np.pi) % (2 * np.pi)) - np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0f7bef29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.5707963267948966"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "angle_normalize(np.deg2rad(-90))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b34fdbcf",
+   "id": "ad51eec7",
    "metadata": {},
    "outputs": [],
    "source": []
