--- a/src/envus/smib/smib_dae_builder.ipynb
+++ b/src/envus/smib/smib_dae_builder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d63af09b-dedc-4960-bf4b-3b4d91f8f179",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1f8bf69f-dd1f-4a8f-8783-81a62c2f2815",
    "metadata": {},
    "outputs": [],
@@ -68,12 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "18f8515e-6f28-4a71-9785-1178a3c1b658",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "smib\n"
+     ]
+    }
+   ],
    "source": [
-    "sys = {'name':'smib_dae',\n",
+    "sys = {'name':'smib_dae','enviroment':'smib',\n",
     "       'params_dict':params_dict,\n",
     "       'f_list':f_list,\n",
     "       'g_list':g_list,\n",
@@ -131,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
