smib with AVR added

--- a/src/envus/smiba/smiba_dae_builder.ipynb
+++ b/src/envus/smiba/smiba_dae_builder.ipynb
@@ -25,7 +25,7 @@
     "p_m,v_f,v_0 = sym.symbols('p_m,v_f,v_0',real=True) # algebraic states\n",
     "X_d,X1d,T1d0,X_q,X1q,T1q0,K_delta = sym.symbols('X_d,X1d,T1d0,X_q,X1q,T1q0,K_delta',real=True)\n",
     "R_a,X_l,H,D,Omega_b,omega_s,Theta_0 = sym.symbols('R_a,X_l,H,D,Omega_b,omega_s,Theta_0',real=True)\n",
-    "                    \n",
+    "v_ref,K_avr,v_s = sym.symbols('v_ref,K_avr,v_s',real=True)                    \n",
     "                    \n",
     "# auxiliar equations\n",
     "v_d = v_t*sin(delta - theta_t)  # park\n",
@@ -47,7 +47,7 @@
     "g_4 = i_d*v_q - i_q*v_d - q_t # reactive power\n",
     "g_5 = p_t - (v_t*v_0*sin(theta_t - Theta_0))/X_l  # network equation (p)\n",
     "g_6 = q_t + (v_t*v_0*cos(theta_t - Theta_0))/X_l - v_t**2/X_l  # network equation (q)     \n",
-    "\n",
+    "g_7 = -v_f + K_avr*(v_ref + v_s - v_t) + 1.0\n",
     "\n",
     "params_dict = {'X_d':1.81,'X1d':0.3, 'T1d0':8.0,  # synnchronous machine d-axis parameters\n",
     "               'X_q':1.76,'X1q':0.65,'T1q0':1.0,  # synnchronous machine q-axis parameters\n",
@@ -55,15 +55,16 @@
     "               'X_l': 0.02, \n",
     "               'H':3.5,'D':0.0,\n",
     "               'Omega_b':2*np.pi*50,'omega_s':1.0,\n",
-    "               'Theta_0':0.0, 'K_delta':1e-8}\n",
+    "               'Theta_0':0.0, 'K_delta':1e-8,\n",
+    "               'K_avr':100.0}\n",
     "\n",
-    "u_ini_dict = {'p_m':0.8,'v_f':1.0,'v_0':1.0}  # for the initialization problem\n",
-    "u_run_dict = {'p_m':0.8,'v_f':1.0,'v_0':1.0}  # for the running problem (here initialization and running problem are the same)\n",
+    "u_ini_dict = {'p_m':0.8,'v_ref':1.0,'v_s':1.0,'v_0':1.0}  # for the initialization problem\n",
+    "u_run_dict = {'p_m':0.8,'v_ref':1.0,'v_s':1.0,'v_0':1.0}  # for the running problem (here initialization and running problem are the same)\n",
     "\n",
     "f_list = [ddelta,domega,de1q,de1d]\n",
     "x_list = [ delta, omega, e1q, e1d]\n",
-    "g_list = [g_1,g_2,g_3,g_4,g_5,g_6]\n",
-    "y_list = [i_d,i_q,p_t,q_t,v_t,theta_t]"
+    "g_list = [g_1,g_2,g_3,g_4,g_5,g_6,g_7]\n",
+    "y_list = [i_d,i_q,p_t,q_t,v_t,theta_t,v_f]"
    ]
   },
   {
@@ -76,12 +77,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "smib\n"
+      "smiba\n"
      ]
     }
    ],
    "source": [
-    "sys = {'name':'smib_dae','enviroment':'smib',\n",
+    "sys = {'name':'smiba_dae','enviroment':'smiba',\n",
     "       'params_dict':params_dict,\n",
     "       'f_list':f_list,\n",
     "       'g_list':g_list,\n",
@@ -90,37 +91,19 @@
     "       'y_run_list':y_list,\n",
     "       'u_run_dict':u_run_dict,\n",
     "       'u_ini_dict':u_ini_dict,\n",
-    "       'h_dict':{'p_m':p_m,'p_e':p_e, 'v_f':v_f}}\n",
+    "       'h_dict':{'p_m':p_m,'p_e':p_e, 'v_f':v_f, 'v_s':v_s, 'v_0':v_0}}\n",
     "\n",
     "bldr = cbuilder.builder(sys)\n",
     "bldr.build()"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "feae3f56-00d5-4453-9090-d93469203b94",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f8d428b-1d6e-49a1-9043-3c343229f72e",
    "metadata": {},
-   "source": [
-    "para que corra en gym:\n",
-    "    \n",
-    "    cambiar la forma en que se leen las matrices dato:\n",
-    "    \n",
-    "    from io import BytesIO\n",
-    "\n",
-    "        fobj = BytesIO(pkgutil.get_data(__name__, '__pycache__/pendulum_dae_sp_jac_ini_num.npz'))\n",
-    "        self.sp_jac_ini = sspa.load_npz(fobj)\n",
-    "        \n",
-    "        fobj = BytesIO(pkgutil.get_data(__name__, '__pycache__/pendulum_dae_sp_jac_run_num.npz'))\n",
-    "        self.sp_jac_run = sspa.load_npz(fobj)       \n",
-    "        \n",
-    "        fobj = BytesIO(pkgutil.get_data(__name__, '__pycache__/pendulum_dae_sp_jac_trap_num.npz'))\n",
-    "        self.sp_jac_trap = sspa.load_npz(fobj)    \n",
-    "    \n",
-    "    \n",
-    "     cambiar la forma de importar\n",
-    "import smib.envs.smib_dae_cffi as jacs\n",
-    "\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
