--- a/src/envus/smiba/smiba_test.ipynb
+++ b/src/envus/smiba/smiba_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "d16c97a3-463d-457d-b2f8-c86a733e3d3a",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,16 @@
     "import matplotlib.pyplot as plt\n",
     "import smiba_dae\n",
     "import smiba_env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "53b2b680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import smiba_build"
    ]
   },
   {
@@ -271,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
