--- a/examples/smib/smiba_td4.ipynb
+++ b/examples/smib/smiba_td4.ipynb
@@ -99,20 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "c9106a1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 0.9939934 ,  0.9967831 ,  0.72461385, -0.3026063 ], dtype=float32),\n",
-       " -0.010348686862604877,\n",
+       "(array([ 0.9899659 ,  1.0024322 ,  0.06140837, -0.505955  ], dtype=float32),\n",
+       " -0.005915897094645818,\n",
        " False,\n",
        " {})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
